# FreeFly

./: README.md  arm-none-eabi.cmake
7_systemview_class/: startup.copy  third.uvguix.Zeeeen1126
7_systemview_class/App/: main.c  systick.c
7_systemview_class/Listings/: my_start.lst  os_cpu_a.lst  startup_stm32f401xe.lst  third.map
7_systemview_class/Objects/: app_hooks.crf  clock_cfg.d  led.d  main.crf  my_system.crf  my_system.d  os_core.d  os_cpu_c.crf  os_cpu_c.d  os_dbg_r.d  os_mbox.crf  os_mbox.d  os_mem.d  os_mutex.d  os_q.crf  os_sem.d  os_task.d  segger_sysview.crf  segger_sysview_ucosii.crf  system.d  systick.crf  third.build_log.htm  third.htm  third.lnp  ucos_ii.d
7_systemview_class/RTE/_Target_1/: RTE_Components.h
7_systemview_class/Start/: clock_cfg.c  my_start.s  my_system.c
7_systemview_class/SystemView/GenericConfig/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h
7_systemview_class/SystemView/OSSpecific/: SEGGER_SYSVIEW_Config_uCOSII.c  SEGGER_SYSVIEW_uCOSII.c  os_cfg_trace.h
7_systemview_class/SystemViewSrcAll/Config/: SEGGER_SYSVIEW_Conf.h
7_systemview_class/SystemViewSrcAll/SEGGER/: SEGGER.h  SEGGER_RTT.h  SEGGER_RTT_printf.c  SEGGER_SYSVIEW_ConfDefaults.h
7_systemview_class/SystemViewSrcAll/SEGGER/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
7_systemview_class/SystemViewSrcAll/Sample/COMM/: SEGGER_SYSVIEW_REC.c  SEGGER_SYSVIEW_REC.h
7_systemview_class/SystemViewSrcAll/Sample/COMM/IP/: SEGGER_SYSVIEW_COMM_IP_embOS_emNet.c
7_systemview_class/SystemViewSrcAll/Sample/COMM/UART/: SEGGER_SYSVIEW_Config_UART.c
7_systemview_class/SystemViewSrcAll/Sample/FreeRTOSV10/: SEGGER_SYSVIEW_FreeRTOS.h
7_systemview_class/SystemViewSrcAll/Sample/FreeRTOSV10.4/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
7_systemview_class/SystemViewSrcAll/Sample/FreeRTOSV10/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
7_systemview_class/SystemViewSrcAll/Sample/FreeRTOSV8/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
7_systemview_class/SystemViewSrcAll/Sample/FreeRTOSV8/Config/Cortex-M/: SEGGER_SYSVIEW_Config_FreeRTOS.c
7_systemview_class/SystemViewSrcAll/Sample/FreeRTOSV9/: SEGGER_SYSVIEW_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
7_systemview_class/SystemViewSrcAll/Sample/MicriumOSKernel/: SEGGER_SYSVIEW_MicriumOSKernel.c
7_systemview_class/SystemViewSrcAll/Sample/MicriumOSKernel/Config/Cortex-M/: SEGGER_SYSVIEW_Config_MicriumOSKernel.c
7_systemview_class/SystemViewSrcAll/Sample/NoOS/Config/Cortex-M/: SEGGER_SYSVIEW_Config_NoOS.c
7_systemview_class/SystemViewSrcAll/Sample/NuttX/: SEGGER_SYSVIEW_NuttX.c  SEGGER_SYSVIEW_NuttX.h
7_systemview_class/SystemViewSrcAll/Sample/RTT/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
7_systemview_class/SystemViewSrcAll/Sample/embOS/: SEGGER_SYSVIEW_embOS.c  SEGGER_SYSVIEW_embOS.h
7_systemview_class/SystemViewSrcAll/Sample/uCOS-III/: SEGGER_SYSVIEW_uCOSIII.c  os_trace_events.h
7_systemview_class/SystemViewSrcAll/Sample/uCOS-III/Config/: os_cfg_trace.h
7_systemview_class/ucos2/Cfg/Template/: os_cfg.h
7_systemview_class/ucos2/Ports/: os_cpu.h  os_cpu_c.c
Application/: log_FF.py  main.c
Application/Hardware/Inc/: attitude.h  ground_control.h  gy86.h  mathkit.h  myI2C.h
Application/Hardware/Src/: ground_control.c  led.c  mathkit.c
Application/SystemView/GenericFiles/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_Int.h
Application/SystemView/OSSpecific/: os_trace_events.h
System/BSP/: systick.c
System/CMSIS/Device/: startup_stm32f401xe.s  stm32f4xx.h
System/FWLIB/: CMakeLists.txt
System/FWLIB/Inc/: stm32f4xx_i2c.h
System/FWLIB/Src/: stm32f4xx_i2c.c
no_os_version/: .gitignore  CMakeLists.txt  README.md  STM32F401RETx_FLASH.ld
no_os_version/Application/: main.c  main.c.bak
no_os_version/Application/Hardware/Inc/: Bluetooth.h  GY86.h  MyDelay.h  math.h
no_os_version/Application/Hardware/Src/: Bluetooth.c  GY86.c  MyDelay.c  MyI2C.c  Receiver.c  math.c
no_os_version/Application/SystemConfig/: MyDelay.c  MyDelay.h
no_os_version/System/BSP/: syscalls.c
no_os_version/System/CMSIS/Device/: stm32f4xx.h  stm32f4xx_conf.h  system_stm32f4xx.h
os_version/: .gitignore  CMakeLists.txt  JLinkSettings.ini  STM32F401.svd  STM32F411.svd  arm-none-eabi.cmake  move_rw_zi.c  third.Target_1.cprj  third.uvoptx  third.uvprojx
os_version/App/: main.c
os_version/App/hardware/: led.h
os_version/Application/: ledtest.c  main.c
os_version/Application/Hardware/Inc/: Bluetooth.h  GY86.h  Motor.h  MyI2C.h  Receiver.h  attitude.h  bluetooth.h  control.h  esp-01s.h  gy86.h  math.h  mathkit.h  motor.h  receiver.h
os_version/Application/Hardware/Src/: Bluetooth.c  Motor.c  MyI2C.c  attitude.c  bluetooth.c  control.c  esp-01s.c  ground_control.c  gy86.c  math.c  mathkit.c  motor.c  myI2C.c  receiver.c
os_version/Application/SystemConfig/: systick.c
os_version/Application/SystemView/GenericConfig/: Global.h
os_version/Objects/: app_hooks.d  clock_cfg.crf  led.crf  main.d  my_start.d  os_core.crf  os_cpu_a.d  os_dbg_r.crf  os_flag.crf  os_flag.d  os_mem.crf  os_mutex.crf  os_q.d  os_sem.crf  os_task.crf  os_time.crf  os_time.d  os_tmr.crf  os_tmr.d  segger_rtt.crf  segger_rtt.d  segger_sysview.d  segger_sysview_config_ucosii.crf  segger_sysview_config_ucosii.d  segger_sysview_ucosii.d  startup.d  startup_stm32f401xe.d  system.crf  system_stm32f4xx.crf  system_stm32f4xx.d  systick.d  third.axf  third_Target 1.dep  ucos_ii.crf
os_version/System/BSP/: syscalls.c
os_version/System/CMSIS/Device/: stm32f401xe.h  system_stm32f4xx.c
os_version/System/FWLIB/Src/: stm32f4xx_sai.c  stm32f4xx_usart.c
os_version/SystemView/GenericFiles/: SEGGER_RTT.h  SEGGER_SYSVIEW.c
os_version/ucos2/Cfg/: includes.h
os_version/ucos2/Cfg/Template/: os_cfg.h
os_version/ucos2/Ports/: os_cpu.h  os_cpu_a.s  os_cpu_c.c
os_version/ucos2/Source/: os_time.c
ucos2/Cfg/Template/: os_cfg.h
ucos2/Ports/: os_cpu_a.s
ucos2/Source/: os_core.c  os_time.c
(+30 files in other folders)
